# dynawo

./: README.md
.github/workflows/: nightly-release.yml  nightly.yml  release.yml
Tests/Case1/: SEXS.mo  TGOV1.mo  case1.crv  case1.dyd  case1.jobs  case1.par
Tests/Case1_RTE/: case1.crv  case1.dyd  case1.jobs  case1.par
Tests/Case2/: SEXS.mo  TGOV1.mo  case2.crv  case2.dyd  case2.jobs  case2.par  solvers.par
Tests/Case2_RTE/: case2.dyd  case2.jobs  case2.par
Tests/Case3/: PSS2A.mo  TGOV1.mo  case3.crv  case3.dyd  case3.jobs  case3.par  solvers.par
Tests/Case3_RTE/: case3.crv  case3.dyd  case3.jobs  case3.par
Tests/Case4/: case4.crv  case4.dyd  case4.jobs  case4.par  solvers.par
Tests/vsc/: Converter3.mo  Measurements.mo  OuterLoop2.mo  solvers.par  test.crv  test.dyd  test.jobs  test.par
Tests/vsc2/: CurrentLoop3.mo  Measurements2.mo  test.dyd  test.jobs
documentation/installation/: installation.tex
dynawo/: CMakeLists.txt
dynawo/sources/API/: CMakeLists.txt
dynawo/sources/Common/: CMakeLists.txt  DYNBitMask.cpp  DYNCommon.cpp  DYNCommon.h  DYNEnumUtils.cpp  DYNEnumUtils.h  DYNError.cpp  DYNError.h  DYNGraph.cpp  (+29 more)
dynawo/sources/Models/Modelica/Dynawo/Electrical/StaticVarCompensators/: CMakeLists.txt  SVarCPV.mo  SVarCPVProp.extvar  SVarCPVProp.mo  SVarCPVPropSimplified.extvar  SVarCPVPropSimplified.mo  SVarCPVRemote.mo  SVarCPVRemoteProp.extvar  SVarCPVRemoteProp.mo  SVarCPVRemotePropSimplified.extvar  SVarCPVRemotePropSimplified.mo  SVarCPVRemoteSimplified.mo  SVarCPVSimplified.mo  package.order
util/: envDynawo.sh
util/windows/: deploy.cmd
(+738 files in other folders)
